# TestRepository

./: index.html  index_2.html  sample.txt  test3.txt
todo-app/: README.md
todo-app/backend/: pyproject.toml  requirements.txt  todo.db
todo-app/backend/app/: database.py  main.py  models.py  schemas.py
todo-app/backend/app/routers/: todos.py
todo-app/frontend/: index.html  package-lock.json  package.json
todo-app/frontend/src/: App.jsx
todo-app/frontend/src/components/: AddTodo.jsx  TodoItem.jsx  TodoList.jsx
