[tool.poetry]
name = "todo-app-backend"
version = "0.1.0"
description = "FastAPI backend for Todo application"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydantic = "^1.8.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
